# sanatan-video-gen2

./: .gitignore  README.md  config.json  demo.json  demo.txt  future.md  image_list.txt  pyproject.toml  requirments.txt  settings.json  todo.md
assets/video_effect/: Rose petals falling green screen [_Di04vHCVxs].webm
backend/: app.py
cli/: __init__.py  __main__.py
dev_scripts/: effect_add.py  progress_bar.py  test1.py
dev_scripts/.resourse/: opengl_and_ffmpeg_integration  other_test.py  prosess_frame.py  shader.frag  some.py
frontend/: package-lock.json  package.json
frontend/old-frontend/: main.py
frontend/public/: index.html
frontend/src/: App.css  App.js
src/video-gen/: __main__.py  logger.py
src/video_gen/: __init__.py  __main__.py  __pipelines__.py  assets.py  countdown.py  engine.py  engion.py  error.py  logger.py  parser.py  settings.py  utility.py  utils.py  video_gen.py
src/video_gen/audio_gen/: __init__.py  base.py  elvenlabs_gen.py  factory.py  gtts_gen.py  timestamps.py  ttspeach.py  ttspeech.py
src/video_gen/editor/: __init__.py  clips.py  edit.py  effect.py  effects.py  ffmpeg.py  media.py
src/video_gen/editor/subtitles_gen/: __init__.py  base.py  image_gen.py
src/video_gen/engine/: __init__.py  base.py  gen1_engine.py
src/video_gen/subtitles_gen/: __init__.py  image_gen.py
src/video_gen/templates/: __init__.py  first_test.py
test/: used_text.txt
